# reflex-magic-link-auth

./: README.md  pyproject.toml
custom_components/reflex_magic_link_auth/: __init__.py  constants.py  magic_link_auth.py  page.py  state.py
custom_components/reflex_magic_link_auth/models/: __init__.py  record.py  session.py
custom_components/reflex_magic_link_auth/providers/: __init__.py  mailgun.py
magic_link_auth_demo/: requirements.txt  rxconfig.py
magic_link_auth_demo/alembic/versions/: 78a161c9da3b_.py  91bcd224b03f_.py
magic_link_auth_demo/magic_link_auth_demo/: magic_link_auth_demo.py
